Fixed nav item spacing

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,3 +1,7 @@
+/* 
+    MOBILE SCREEN
+*/
+
 .navbar {
   height: 80px;
   width: 100%;
@@ -14,21 +18,27 @@
   align-items: center;
 }
 
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.topNav {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
-  height: 100%;
-  flex: 1;
-  margin-right: 2rem;
+  align-items: center;
+  width: 100%;
 }
 
-.navbar li {
+.profilePic {
   border-radius: 50%;
 }
+
+.desktopOnly,
+.footer,
+.emojis {
+  display: none;
+}
+
+/* 
+    DESKTOP SCREEN
+*/
 
 @media (min-width: 769px) {
   .navbar {
@@ -36,13 +46,73 @@
     width: 25%;
     position: fixed;
     left: 0;
-    border-right: 1px solid var(--color-gray);
+    padding: 0;
+    border-right: 2px solid var(--color-gray);
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
 
-  .navbar ul {
+  .topNav {
+    padding: 2rem 0;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+  }
+
+  .profilePic {
+    border-radius: 50%;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+  }
+
+  .desktopOnly {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .loggedIn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 0.6rem;
+    font-weight: 400;
+    color: grey;
+    height: fit-content;
+    width: 100%;
+  }
+
+  .footer p {
+    margin-top: 0.5rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .emojis {
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 24px;
+    color: #ccc;
+    text-align: center;
+    z-index: -1;
+    filter: blur(2px);
   }
 }
